packages/components/header/style/index.less
@import '../../style/variable/index.less';
@import '../../style/mixins/ellipsis.less';
@import '../../style/mixins/reset.less';

.@{header-prefix} {
  .reset-component-new();
  .reset-color(var(--ix-color-text-title), transparent);

  position: relative;
  display: flex;
  align-items: center;
  width: 100%;

  &-sm {
    .header-size(var(--ix-header-height-sm), var(--ix-font-size-header-sm), 8px);
  }

  &-md {
    .header-size(var(--ix-header-height-md), var(--ix-font-size-header-md), 8px);
  }

  &-lg {
    .header-size(var(--ix-header-height-lg), var(--ix-font-size-header-lg), 8px);
  }

  // @deprecated
  &-xl {
    .header-size(var(--ix-header-height-xl), var(--ix-font-size-header-xl), 12px);
  }

  &-prefix {
    margin-right: 16px;
  }

  .@{avatar-prefix} {
    margin-right: 16px;
  }

  &-title-wrapper {
    margin-right: 16px;
  }

  &-title {
    font-weight: var(--ix-font-weight-header);
    .ellipsis();
  }

  &-sub-title {
    .reset-font-size(var(--ix-header-sub-title-font-size));
    .ellipsis();

    color: var(--ix-color-text-title-secondary);
    margin-left: 8px;
  }

  &-prefix,
  &-suffix {
    display: inline-block;
    cursor: pointer;

    .@{icon-prefix} {
      font-size: var(--ix-font-size-icon);
    }
  }

  &-prefix {
    color: var(--ix-header-prefix-color);
    &:hover {
      color: var(--ix-header-prefix-color-hover);
    }

    &:active {
      color: var(--ix-header-prefix-color-active);
    }
  }

  &-suffix {
    color: var(--ix-header-suffix-color);
    margin-left: auto;
    padding: 0 4px;

    &:hover {
      color: var(--ix-header-suffix-color-hover);
    }

    &:active {
      color: var(--ix-header-suffix-color-active);
    }
  }

  &-description {
    .reset-font-size();

    width: 100%;
    color: var(--ix-color-text-info);
  }

  &-disabled {
    color: var(--ix-color-text-disabled);

    .@{header-prefix}-prefix {
      color: var(--ix-header-prefix-color-disabled);
      cursor: not-allowed;

      &:hover,
      &:active {
        > .@{icon-prefix} {
          color: var(--ix-header-prefix-color-disabled);
        }
      }
    }

    .@{header-prefix}-suffix {
      color: var(--ix-header-suffix-color-disabled);
      cursor: not-allowed;

      &:hover,
      &:active {
        > .@{icon-prefix} {
          color: var(--ix-header-suffix-color-disabled);
        }
      }
    }

    .@{header-prefix}-title,
    .@{header-prefix}-sub-title,
    .@{header-prefix}-description {
      color: var(--ix-color-text-disabled);
    }
  }

  &-with-bar {
    padding-left: calc(var(--ix-header-bar-width) + var(--ix-header-bar-margin-right));

    &::before {
      position: absolute;
      left: 0;
      top: 0;
      bottom: 0;
      width: var(--ix-header-bar-width);
      background-color: var(--ix-header-bar-bg-color);
      border-radius: var(--ix-header-bar-border-radius);
      content: '';
    }
  }

  &-with-description {
    .@{header-prefix}-prefix,
    .@{header-prefix}-suffix {
      align-self: flex-start;
    }
  }
}

.header-size(@height, @font-size, @padding) {
  @bar-height: calc(@font-size - 2px);

  .reset-font-size(@font-size);

  min-height: @height;

  &.@{header-prefix}-with-bar {
    &::before {
      margin: auto 0;
      height: @bar-height;
    }
  }

  &.@{header-prefix}-with-description {
    min-height: calc(@height + 16px);
    padding-top: @padding;
    padding-bottom: @padding;
  }
}

